staging/k8s/externaldns-rbac.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-dns-staging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns-staging
    spec:
      serviceAccountName: external-dns-staging
      containers:
      - name: external-dns-staging
        image: k8s.gcr.io/external-dns/external-dns:v0.13.4
        args:
        - --source=service # ingress is also possible
        - --domain-filter=akatsuki.gg # (optional) limit to only akatsuki.gg domains; change to match the zone created above.
        - --zone-id-filter=$CF_ZONE_ID # (optional) limit to a specific zone.
        - --provider=cloudflare
        - --cloudflare-proxied # (optional) enable the proxy feature of Cloudflare (DDOS protection, CDN...)
        - --cloudflare-dns-records-per-page=5000 # (optional) configure how many DNS records to fetch per request
