staging/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-staging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "next.akatsuki.gg"
      http:
        paths:
        - path: /api/users(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: users-service-staging
              port:
                number: 80
